hotfix: an iphone issue with how pixels are calculated on IOS?

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -12,7 +12,7 @@
   border: none;
   outline: none;
   background-color: transparent;
-  max-width: 38px;
+  min-width: 38px;
 }
 
 .hamburgerButton svg {
